...
                Create you profile and start matching with others who share your bucket list goals
              </TextView>
              <Button
                variant='primary'
                onPress={openUserProfileBottomSheet}
              >
                User Profile
              </Button>
              <Button
                variant='secondary-alt'
                onPress={openCompanyProfileModal}
              >
                Company Profile
...
          <View style={styles.buttonsContainer}>
            <VStack gap={theme.spacing.sp8}>
              <Button variant='primary' onPress={toggleLoginModal}>
                Login
              </Button>
              <Button variant='primary-alt' onPress={toggleRegisterModal}>
                Register
              </Button>
            </VStack>
          </View>
        </LinearGradient>
      </ImageBackground>
    </>
...
