...
import { supabase } from '@/supabase/config';
import { useDebouncedCallback } from '@/hooks/useDebouncedCallback';


export const errorMessages = {
  email: 'Email is required',
  password: 'Password is required',
  repeatPassword: 'Verify Password again',
  name: 'Name is required',
  username: 'User Name is required',
  birthday: 'Birthday is required',
};

...
          iconName='lock'
          defaultErrMessage={errorMessages.repeatPassword}
        />
      </KeyboardAwareScrollView>

      <FooterButton
        text='Next'
        onNext={formProps.handleSubmit(handleUserState)}
      />
    </FormProvider>
  );
};

